change email address

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hello, <br> I'm Stephen </h2>
                                 <p data-animation="bounceInDown" data-delay="500ms"> A Software Developer </p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
-                                    <a href="mailto:korankyes027@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
-                                    <a class="hero-mail-contact" href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a>
+                                    <a href="mailto:hello@stephenkorankye.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
+                                    <a class="hero-mail-contact" href="mailto:hello@stephenkorankye.com"> hello@stephenkorankye.com </a>
                                 </div>
                             </div>
                         </div>
@@ -155,8 +155,8 @@
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm  Stephen </h2>
                                 <p data-animation="bounceInUp" data-delay="500ms"> I Design and Develop </p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="mailto:korankyes027@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
-                                    <a class="hero-mail-contact" href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a>
+                                    <a href="mailto:hello@stephenkorankye.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
+                                    <a class="hero-mail-contact" href="mailto:hello@stephenkorankye.com"> hello@stephenkorankye.com </a>
                                 </div>
                             </div>
                         </div>
@@ -175,8 +175,8 @@
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm  Stephen </h2>
                                 <p data-animation="bounceInUp" data-delay="500ms"> A Software Developer </p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="mailto:korankyes027@gmail.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
-                                    <a class="hero-mail-contact" href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a>
+                                    <a href="mailto:hello@stephenkorankye.com" class="btn alime-btn mb-3 mb-sm-0 mr-4"> Contact Me </a>
+                                    <a class="hero-mail-contact" href="mailto:hello@stephenkorankye.com"> hello@stephenkorankye.com </a>
                                 </div>
                             </div>
                         </div>
@@ -306,7 +306,7 @@
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0 wow fadeInUp" data-wow-delay="50ms">
           <div class="icon-box p-3">
 			<img src="img/logos/gmail.webp" />
-            <a href="mailto:korankyes027@gmail.com" target="__blank"><h3> Email </h3></a>
+            <a href="mailto:hello@stephenkorankye.com" target="__blank"><h3> Email </h3></a>
           </div>
         </div>
 
@@ -448,7 +448,7 @@
 								<span class="fa fa-paper-plane"></span>
 							</div>
 							<div class="text">
-								<p><span>Email:</span> <a href="mailto:korankyes027@gmail.com"> korankyes027@gmail.com </a></p>
+								<p><span>Email:</span> <a href="mailto:hello@stephenkorankye.com"> hello@stephenkorankye.com </a></p>
 							</div>
 						</div>
 						
@@ -483,10 +483,10 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2 wow fadeInUp" >Services</h2>
 						<ul class="list-unstyled">
-							<li class="wow fadeInUp" data-wow-delay="50ms"><a href="mailto:korankyes027@gmail.com"><span class="fa fa-chevron-right mr-2 "></span> Web Design </a></li>
-							<li class="wow fadeInUp" data-wow-delay="70ms"><a href="mailto:korankyes027@gmail.com"><span class="fa fa-chevron-right mr-2"></span> Web Development </a></li>
-							<li class="wow fadeInUp" data-wow-delay="90ms"><a href="mailto:korankyes027@gmail.com"><span class="fa fa-chevron-right mr-2"></span> Desktop Applications </a></li>
-							<li class="wow fadeInUp" data-wow-delay="120ms"><a href="mailto:korankyes027@gmail.com"><span class="fa fa-chevron-right mr-2"></span> Programming Tutoring </a></li>
+							<li class="wow fadeInUp" data-wow-delay="50ms"><a href="mailto:hello@stephenkorankye.com"><span class="fa fa-chevron-right mr-2 "></span> Web Design </a></li>
+							<li class="wow fadeInUp" data-wow-delay="70ms"><a href="mailto:hello@stephenkorankye.com"><span class="fa fa-chevron-right mr-2"></span> Web Development </a></li>
+							<li class="wow fadeInUp" data-wow-delay="90ms"><a href="mailto:hello@stephenkorankye.com"><span class="fa fa-chevron-right mr-2"></span> Desktop Applications </a></li>
+							<li class="wow fadeInUp" data-wow-delay="120ms"><a href="mailto:hello@stephenkorankye.com"><span class="fa fa-chevron-right mr-2"></span> Programming Tutoring </a></li>
 							
 						</ul>
 					</div>
@@ -496,7 +496,7 @@
 						<h2 class="ftco-heading-2 wow fadeInUp"> Let's Talk More </h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li class="wow fadeInUp" data-wow-delay="150ms"><a href="mailto:korankyes027@gmail.com"><span class="icon fa fa-paper-plane pr-4"></span><span class="text"> korankyes027@gmail.com </span></a></li>
+								<li class="wow fadeInUp" data-wow-delay="150ms"><a href="mailto:hello@stephenkorankye.com"><span class="icon fa fa-paper-plane pr-4"></span><span class="text"> hello@stephenkorankye.com </span></a></li>
 							</ul>
 						</div>
 						<ul class="ftco-footer-social list-unstyled mt-2">
