fix about me email url

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 							<span style="margin: 2px 4px;"> LINKEDIN </span> 
 						</a>
 						
-						<a href="https://twitter.com/stevekorankye" target="_blank" class="m-2" 
+						<a href="mailto:hello@stephenkorankye.com" target="_blank" class="m-2" 
 							style="display: flex; align-items: flex-end; background-color: rgba(233,233,233,1); padding:1px 5px; border-radius: 3px;"
 							>
 							<span style="margin: 4px"> <img src="./img/logos/gmail.webp" style="width: 20px;"/> </span>
