remove redundant  code and update 404

--- a/404.html
+++ b/404.html
@@ -93,9 +93,9 @@
     <div class="d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
             <h1 class="display-1 fw-bold">404</h1>
-            <p class="fs-3"> <span class="text-danger">Sorry,</span> CV Will be sent upon request</p>
+            <p class="fs-3"> <span class="text-danger">Sorry,</span> Page not found</p>
             <p class="lead">
-                Send a message via: <a href="mailto:korankyes027@gmail.com">korankyes027@gmail.com</a>
+                Send a message via: <a href="mailto:hello@stephenkorankye.com">hello@stephenkorankye.com</a>
               </p>
             <a href="/" class="btn btn-primary">Go Home</a>
         </div>
